--- a/index.html
+++ b/index.html
@@ -241,25 +241,25 @@
 				<section class="panel" id="experience">
 					<h1>Expérience Professionnelle</h1>
 						<div class="col-md-12">
-							<h2 class="titreExp">Développeur web & mobile (Contrat en Alternance)</h2>
+							<h2 style="padding-top: 5px;" class="titreExp">Développeur web & mobile (Contrat en Alternance) <span class="label label-default">Depuis octobre 2017</span></h2>
 							<h3 class="sousTitreExp">Aubay, Boulogne-Billancourt, France</h3>
 							<p>Modification et amélioration d'un site en php, mise en place d'une application java pour les utilisateurs </p>
 						</div>
 		
 						<div class="col-md-12 sectionExp">
-							<h2 class="titreExp">Développeur Web (Stage BTS SIO 2<sup style="font-size: 15px;">ème</sup> année)</h2>
+							<h2 class="titreExp">Développeur Web (Stage BTS SIO 2<sup style="font-size: 15px;">ème</sup> année) <span class="label label-default">Décembre 2016 - Février 2017</span></h2>
 							<h3 class="sousTitreExp">Kuantom, Paris 15, France</h3>
 							<p>Création d’un site/blog en Symfony 2, développement du web design selon une maquette </p>
 						</div>
 		
 						<div class="col-md-12 sectionExp">
-							<h2 class="titreExp">Développeur Web (Stage BTS SIO 1<sup style="font-size: 15px;">ère</sup> année)</h2>
+							<h2 class="titreExp">Développeur Web (Stage BTS SIO 1<sup style="font-size: 15px;">ère</sup> année)<span class="label label-default">Mai 2016 - Juillet 2016</span></h2>
 							<h3 class="sousTitreExp">Papermade Pictures, Nanterre, France</h3>
 							<p>Développement de la partie web design du site, présentation du projet aux clients</p>
 						</div>
 		
 						<div class="col-md-12 sectionExp">
-							<h2 class="titreExp">Adjoint chef caisse (contrat étudiant)</h2>
+							<h2 class="titreExp">Adjoint chef caisse (contrat étudiant) <span class="label label-default">Depuis 2012</span></h2>
 							<h3 class="sousTitreExp">Intermarché, Clamart, France</h3>
 							<p>Accueil du magasin, hôte de caisse, gestion et management des hôtes de caisses, vérification du coffre du magasin et contrôles du chiffre d’affaires de la journée</p>
 						</div>
@@ -271,18 +271,18 @@
 					<h1>Formation</h1>
 	
 					<div class="col-md-12">
-						<h2 class="titreExp">Bachelor Développement web & mobilité</h2>
+						<h2 class="titreExp">Bachelor Développement web & mobilité <span class="label label-default">En cours</span></h2>
 						<h3 class="sousTitreExp">ECETech Groupe ECE - Actuellement en cours</h3>
 					</div>
 	
 					<div class="col-md-12">
-						<h2 class="titreExp">BTS SERVICE INFORMATIQUES AUX ORGANISATIONS OPTION SLAM</h2>
+						<h2 class="titreExp">BTS SERVICE INFORMATIQUES AUX ORGANISATIONS OPTION SLAM <span class="label label-default">2015-2017</span></h2>
 						<h3 class="sousTitreExp">ECETech Groupe ECE - Obtention du BTS</h3>
 					</div>
 	
 					<div class="col-md-12">
-						<h2 class="titreExp">BAC STI2D Spécialité SIN</h2>
-						<h3 class="sousTitreExp">Lycée Martin Luther King - Obtention du bac mention assez bien</h3>
+						<h2 class="titreExp">BAC STI2D Spécialité SIN <span class="label label-default">2013-2015</span></h2>
+						<h3 class="sousTitreExp">Lycée Martin Luther King - Obtention du bac mention assez bien </h3>
 					</div>
 				</section>
 				<div class="clearfix"></div>
